# memoryos

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: server.py
examples/: basic_usage.py  langchain_integration.py
memoryos/: __init__.py  agent.py  models.py  retriever.py  store.py  vector.py
tests/: test_memory.py
