[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "memoryos"
version = "0.1.0"
description = "Persistent episodic + semantic memory for AI agents with Ebbinghaus forgetting curves"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Mayank Shekhar", email = "mayanksiingh2@gmail.com" }]
keywords = ["ai", "agents", "memory", "rag", "langchain", "llm", "vector-database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"

dependencies = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.2.0", "langchain-openai>=0.1.0"]
dev = ["pytest>=8.0", "pytest-asyncio", "httpx", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/MAYANK12WQ/memoryos"
Repository = "https://github.com/MAYANK12WQ/memoryos"
Issues = "https://github.com/MAYANK12WQ/memoryos/issues"

[tool.setuptools.packages.find]
include = ["memoryos*", "api*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
